fix(card): align dismiss target with latest figma
- increase the dismiss control to use the full top-right corner area shown in the latest Figma card variants
- keep the visible close icon at 32px while reserving matching content space on text-only dismissible cards
- simplify the no-image dismissible padding reserve to direct size tokens

--- a/packages/toolkit/components/card/card.scss
+++ b/packages/toolkit/components/card/card.scss
@@ -31,14 +31,14 @@ $card-border-hover-color: $ofh-color-border-card-hover;
 }
 
 .ofh-card__content--dismissible {
-  padding-right: calc(#{$ofh-size-16} + #{$ofh-size-32} + #{$ofh-size-8});
+  padding-right: $ofh-size-64;
 
   @include mq($from: tablet) {
-    padding-right: calc(#{$ofh-size-24} + #{$ofh-size-32} + #{$ofh-size-8});
+    padding-right: $ofh-size-80;
   }
 
   @include mq($from: desktop) {
-    padding-right: calc(#{$ofh-size-32} + #{$ofh-size-32} + #{$ofh-size-8});
+    padding-right: $ofh-size-96;
   }
 }
 
@@ -150,20 +150,18 @@ $card-border-hover-color: $ofh-color-border-card-hover;
   border-radius: $ofh-radius-circular;
   color: $ofh-color-foreground-primary;
   cursor: pointer;
-  padding: $ofh-size-8;
+  padding: $ofh-size-16;
   position: absolute;
-  right: calc(#{$ofh-size-16} - #{$ofh-size-8});
-  top: calc(#{$ofh-size-16} - #{$ofh-size-8});
+  right: 0;
+  top: 0;
   z-index: 1;
 
   @include mq($from: tablet) {
-    right: calc(#{$ofh-size-24} - #{$ofh-size-8});
-    top: calc(#{$ofh-size-24} - #{$ofh-size-8});
+    padding: $ofh-size-24;
   }
 
   @include mq($from: desktop) {
-    right: calc(#{$ofh-size-32} - #{$ofh-size-8});
-    top: calc(#{$ofh-size-32} - #{$ofh-size-8});
+    padding: $ofh-size-32;
   }
 
   &:focus {
